# tracept

./: LICENSE  README.md  pyproject.toml
examples/: lorenz96.py
tracept/: __init__.py  core.py  interp.py  odes.py
