[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracept"
version = "0.0.2"

# dynamic = ["version"]
dependencies = [
    "jax",
    "jaxlib",
    "numpy",
	#"scipy",
    #"dill",
    #"matplotlib",
    #"cmasher",
    #"mathutils",
]

requires-python = ">= 3.10"

authors = [
    {name = "Thomas A. Scott"},
]

description = "JIT-compile-time utilities for cleaner JAX code, with extra utilities for dynamic systems."

[project.urls]
Homepage = "https://github.com/tscott-00/tracept"
